# laba2sem3

./: README.md
Matrix_Lab-NewVector/: CMakeLists.txt  README.md
Matrix_Lab-NewVector/Vector/: CMakeLists.txt  main.cpp
Matrix_Lab-NewVector/VectorLib/: CMakeLists.txt  Matrix.h  Vector.h
Matrix_Lab-NewVector/gtest/: CMakeLists.txt
Matrix_Lab-NewVector/test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
